@@ -41,10 +41,14 @@ function(x, digits=3, ..., var.onesided=TRUE) {
 			cat(paste0("Difference of means between groups (", x$groupnames[1], "-", x$groupnames[2], ")\n"))
 			cat("#####################################\n")
 		
-			MD <- getCor(x, label=".meanDiff.", group=0)[, -1]
+			MD <- getCor(x, label=".meanDiff.", group=0)[, -1]			
 			colnames(MD)[1] <- "component"
 			colnames(MD)[2] <- "diff"
-			print(MD[, 1:7])
+			
+			pval <- MD$p.value
+			MD2 <- cbind(MD[, 1:5], sig=p2star(pval), MD[, 6:7])
+			MD2$p.value <- p(pval, digits)
+			print(MD2, row.names=FALSE)
 		}
 		if (x$diff == TRUE) {
 			cat("\n\n#####################################\n")
@@ -54,7 +58,11 @@ function(x, digits=3, ..., var.onesided=TRUE) {
 			VD <- getCor(x, label=".varDiff.", group=0)[, -1]
 			colnames(VD)[1] <- "component"
 			colnames(VD)[2] <- "diff"
-			print(VD[, 1:7])
+			
+			pval <- VD$p.value
+			VD2 <- cbind(VD[, 1:5], sig=p2star(pval), VD[, 6:7])
+			VD2$p.value <- p(pval, digits)
+			print(VD2, row.names=FALSE)
 		}
 	}
 }
@@ -85,8 +93,11 @@ function(x, group=1, digits=3, conf.level=0.95, var.onesided=TRUE) {
 	if (var.onesided == TRUE) {
 		T$p.value <- T$p.value/2
 	}
+	pval <- T$p.value
 	T[, -1] <- round(T[, -1], digits)
-	print(T)
+	T2 <- cbind(T[, 1:5], sig=p2star(pval), T[, 6:7])
+	T2$p.value <- p(pval, digits)
+	print(T2)
 	
 	cat("\n\nRelative variance decomposition:\n----------------\n")
 	print(round(percTable(x, group=group)$stand * 100))
@@ -95,84 +106,93 @@ function(x, group=1, digits=3, conf.level=0.95, var.onesided=TRUE) {
 	if (!x$drop %in% c("actor", "partner", "GR")) {
 		cat("\n\nGeneralized reciprocity (actor-partner covariances):\n----------------\n")
 		GR <- getGR(x, group=group)
-		print(GR, row.names=TRUE)
+		pval <- GR$p.value
+		GR2 <- cbind(GR[, 1:5], sig=p2star(pval), GR[, 6:8])
+		GR2$p.value <- p(pval, digits)
+		print(GR2)
 	}
 	
 	#cat("\n\nDyadic reciprocity (relationship covariances): Mean r =", round(meanNA(GR$COR), digits),"(out of bounds estimates set to NA)\n----------------\n")
 	DR <- getDR(x, group=group)
 	#cat("\n\nDyadic reciprocity (relationship covariances): Mean r =", round(meanNA(DR$r), digits),"(out of bounds estimates set to NA)\n----------------\n")
 	cat("\n\nDyadic reciprocity (relationship covariances):\n----------------\n")
-	print(DR, row.names=TRUE)
+	DR2 <- cbind(DR[, 1:5], sig=p2star(DR$p.value), DR[, 6:8])
+	DR2$p.value <- p(DR2$p.value, digits)
+	print(DR2)
 	
 	if (length(x$IGSIM) > 0) {
 		cat("\n\nIntragenerational similarity:\n----------------\n")
 		igsim <- SS[grepl("IGSIM", SS$label), ][, -2]
-		print(igsim)
+		pval <- igsim2$p.value
+		igsim2 <- cbind(igsim[, 1:5], sig=p2star(pval), igsim[, 6:8])
+		igsim2$p.value <- p(igsim2$pval, digits)
+		print(igsim2)
 	}
 	
-	if (x$self == TRUE) {
-		AS <- data.frame()
-		for (t in x$roles) {
-			
-			if (x$selfmode == "cor") {F <- paste(style$actor, ".", t, " ~~ ", style$self, ".", t, sep="")}
-			if (x$selfmode == "kq") {F <- paste(style$self, ".", t, " ~ ", style$actor, ".", t, sep="")}
-						
-			AS0 <- SS[SS$f == F, ]
-			AS0$comment <- ""
-
-			# get Variance of components --> if that is < min.p, correlation is not reliable!
-			SD1 <- SS[SS$f == paste(style$partner, ".", t, " ~~ ", style$partner, ".", t, sep=""), ]
-			SD2 <- SS[SS$f == paste(style$self, ".", t, " ~~ ", style$self, ".", t, sep=""), ]
-			if (is.na(SD1$pvalue)) SD1$pvalue <- 1
-			if (is.na(SD2$pvalue)) SD2$pvalue <- 1
-
-			if (SD1["pvalue"] > x$min.p | SD2["pvalue"] > x$min.p) {
-				AS0$COR <- NA_real_
-				AS0$comment <- paste("One of the variance components has p <", x$min.p)
-			}
-			
-			if (AS0$pvalue > x$min.p) {
-				AS0$COR <- NA_real_
-				AS0$comment <- paste("Covariance estimate has p <", x$min.p)
-			}
-
-			AS <- rbind(AS, AS0)
-		}
-		#cat("\n\nAssumed similarity: Mean r =", round(meanNA(AS$COR), digits),"(out of bound estimates set to zero)\n----------------\n")
-		cat("\n\nAssumed similarity:\n----------------\n")
-		print(AS,row.names=TRUE)
-		
-		SO <- data.frame()
-		for (t in x$roles) {
-			if (x$selfmode == "cor") {F <- paste(style$partner, ".", t, " ~~ ", style$self, ".", t, sep="")}
-			if (x$selfmode == "kq") {F <- paste(style$self, ".", t, " ~ ", style$partner, ".", t, sep="")}
-						
-			SO0 <- SS[SS$f == F, ]
-			SO0$comment <- ""
-
-			# get Variance of components --> if that is < min.p, correlation is not reliable!
-			SD1 <- SS[SS$f == paste(style$partner, ".", t, " ~~ ", style$partner, ".", t, sep=""), ]
-			SD2 <- SS[SS$f == paste(style$self, ".", t, " ~~ ", style$self, ".", t, sep=""), ]
-			if (is.na(SD1$pvalue)) SD1$pvalue <- 1
-			if (is.na(SD2$pvalue)) SD2$pvalue <- 1
-
-			if (SD1["pvalue"] > x$min.p | SD2["pvalue"] > x$min.p) {
-				SO0$COR <- NA_real_
-				SO0$comment <- paste("One of the variance components has p <", x$min.p)
-			}
-			
-			if (SO0$pvalue > x$min.p) {
-				SO0$COR <- NA_real_
-				SO0$comment <- paste("Covariance estimate has p <", x$min.p)
-			}
-
-			SO <- rbind(SO, SO0)
-		}
-		SO$COR <- as.numeric(SO$COR)
-		#cat("\n\nSelf-Other agreement: Mean r =", round(meanNA(SO$COR), digits),"(out of bound estimates set to NA)\n----------------\n")
-		cat("\n\nSelf-Other agreement:\n----------------\n")
-		print(SO, row.names=TRUE)
-	}
+	# TODO: Include self-ratings
+	# if (x$self == TRUE) {
+# 		AS <- data.frame()
+# 		for (t in x$roles) {
+#
+# 			if (x$selfmode == "cor") {F <- paste(style$actor, ".", t, " ~~ ", style$self, ".", t, sep="")}
+# 			if (x$selfmode == "kq") {F <- paste(style$self, ".", t, " ~ ", style$actor, ".", t, sep="")}
+#
+# 			AS0 <- SS[SS$f == F, ]
+# 			AS0$comment <- ""
+#
+# 			# get Variance of components --> if that is < min.p, correlation is not reliable!
+# 			SD1 <- SS[SS$f == paste(style$partner, ".", t, " ~~ ", style$partner, ".", t, sep=""), ]
+# 			SD2 <- SS[SS$f == paste(style$self, ".", t, " ~~ ", style$self, ".", t, sep=""), ]
+# 			if (is.na(SD1$pvalue)) SD1$pvalue <- 1
+# 			if (is.na(SD2$pvalue)) SD2$pvalue <- 1
+#
+# 			if (SD1["pvalue"] > x$min.p | SD2["pvalue"] > x$min.p) {
+# 				AS0$COR <- NA_real_
+# 				AS0$comment <- paste("One of the variance components has p <", x$min.p)
+# 			}
+#
+# 			if (AS0$pvalue > x$min.p) {
+# 				AS0$COR <- NA_real_
+# 				AS0$comment <- paste("Covariance estimate has p <", x$min.p)
+# 			}
+#
+# 			AS <- rbind(AS, AS0)
+# 		}
+# 		#cat("\n\nAssumed similarity: Mean r =", round(meanNA(AS$COR), digits),"(out of bound estimates set to zero)\n----------------\n")
+# 		cat("\n\nAssumed similarity:\n----------------\n")
+# 		print(AS,row.names=TRUE)
+#
+# 		SO <- data.frame()
+# 		for (t in x$roles) {
+# 			if (x$selfmode == "cor") {F <- paste(style$partner, ".", t, " ~~ ", style$self, ".", t, sep="")}
+# 			if (x$selfmode == "kq") {F <- paste(style$self, ".", t, " ~ ", style$partner, ".", t, sep="")}
+#
+# 			SO0 <- SS[SS$f == F, ]
+# 			SO0$comment <- ""
+#
+# 			# get Variance of components --> if that is < min.p, correlation is not reliable!
+# 			SD1 <- SS[SS$f == paste(style$partner, ".", t, " ~~ ", style$partner, ".", t, sep=""), ]
+# 			SD2 <- SS[SS$f == paste(style$self, ".", t, " ~~ ", style$self, ".", t, sep=""), ]
+# 			if (is.na(SD1$pvalue)) SD1$pvalue <- 1
+# 			if (is.na(SD2$pvalue)) SD2$pvalue <- 1
+#
+# 			if (SD1["pvalue"] > x$min.p | SD2["pvalue"] > x$min.p) {
+# 				SO0$COR <- NA_real_
+# 				SO0$comment <- paste("One of the variance components has p <", x$min.p)
+# 			}
+#
+# 			if (SO0$pvalue > x$min.p) {
+# 				SO0$COR <- NA_real_
+# 				SO0$comment <- paste("Covariance estimate has p <", x$min.p)
+# 			}
+#
+# 			SO <- rbind(SO, SO0)
+# 		}
+# 		SO$COR <- as.numeric(SO$COR)
+# 		#cat("\n\nSelf-Other agreement: Mean r =", round(meanNA(SO$COR), digits),"(out of bound estimates set to NA)\n----------------\n")
+# 		cat("\n\nSelf-Other agreement:\n----------------\n")
+# 		print(SO, row.names=TRUE)
+# 	}
 	
 	if (x$means == TRUE) {
 		if (x$pairwise==TRUE) {
@@ -185,10 +205,14 @@ function(x, group=1, digits=3, conf.level=0.95, var.onesided=TRUE) {
 		} else {
 			MS <- eff[grepl(paste0(".means", x$groupnames[group], "."), eff$label, fixed=TRUE), c(1, 6:11)]
 		}
-		colnames(MS) <- c("factor", "estimate", "se", "z", "p.value", "ci.lower", "ci.upper")
-		MS[, -1] <- round(MS[, -1], digits)
+		colnames(MS) <- c("factor", "estimate", "se", "z", "p.value", "ci.lower", "ci.upper")		
 		rownames(MS) <- NULL
-		print(MS)
+
+		pval <- MS$p.value
+		MS[, -1] <- round(MS[, -1], digits)
+		MS2 <- cbind(MS[, 1:5], sig=p2star(pval), MS[, 6:7])		
+		MS2$p.value <- p(pval, digits)
+		print(MS2)
 	}
 	
 }
